force-app/main/default/objects/Discount_Approval_Attribute__mdt/Discount_Approval_Attribute__mdt.object-meta.xml
<CustomObject>
    <label>Discount Approval Attribute</label>
    <pluralLabel>Discount Approval Attributes</pluralLabel>
</CustomObject>