force-app/main/default/objects/Discount_Approval_Attribute__mdt/fields/isEligibleSet__c.field-meta.xml
<CustomField>
    <fullName>isEligibleSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEligibleSet</label>
    <type>Checkbox</type>
</CustomField>