force-app/main/default/objects/Discount_Approval_Attribute__mdt/fields/Logic_Operator__c.field-meta.xml
<CustomField>
    <fullName>Logic_Operator__c</fullName>
    <label>Logic Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;</fullName>
                <default>true</default>
                <label>&lt;</label>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>&lt;&gt;</fullName>
            </value>
            <value>
                <fullName>Matrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>